src/components/styles/MyLocations.css
.saved-locations {
    display: flex;
    gap: 60px;
    padding: 60px 40px 140px 40px;
    flex-wrap: wrap;
    overflow-y: auto;
}

.saved-location {
    background-color: #515e8e;
    height: 200px;
    width: 200px;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: hover .3s, transform .3s, background .3s;
    position: relative;
}

.saved-location:hover {
    transform: scale(1.05);
    background-color: #5d74c6;
}

.saved-location > h2 {
    text-align: center;
}

.hidden {
    display: none;
}

.open {
    position: fixed;
    height: 700px;
    width: 900px;
    overflow-y: auto;
    padding: 20px;
    z-index: 2;
    top: 50px;
    left: calc(50% - 400px);
    right: 50%;
    display: block;
}

.open:hover {
    transform: scale(1);
    background-color: #515e8e;
}

.open > .hidden {
    display: block;
}

.description {
    letter-spacing: 1.5px;
    line-height: 25px;
}

.remove-btn {
    width: fit-content;
    align-self: center;
    padding: 10px;
    border-radius: 10px;
    display: flex;
    gap: 10px;
    transform: translateY(-80px);
    opacity: 0;
    transition: .3s;
    z-index: -1;
}

.location-info:not(.open-overflow):hover > .remove-btn {
    transform: translateY(0);
    opacity: 1;
    z-index: 0;
}

.remove-btn:hover {
    margin-top: 2px;
}

.remove-btn:active {
    margin-top: 6px;
}

.remove-btn:hover, .close-btn:hover {
    background-color: rgb(199, 68, 42);
}

.location-info {
    width: fit-content;
    height: fit-content;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.no-itinerary, .no-user {
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 25px;
    line-height: 50px;
    letter-spacing: 1.5px;
}

.close-btn {
    padding: 10px;
    border-radius: 50%;
    height: 50px;
    width: 50px;
    position: absolute;
    right: 20px;
    top: 20px;
}

.overflow {
    position: absolute;
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
    height: 100%;
    width: 100%;
    z-index: 1;
    top: 0;
    left: 0;
    display: none;
}

.open-overflow > .overflow {
    display: block;
}

.user-locations {
    font-size: 20px;
    text-align: center;
    letter-spacing: 3.5px;
}

.section-title {
    margin: 0;
    font-family: 'Moirai One', cursive;
    font-size: 40px;
    text-align: center;
    padding: 20px 0;
}

@media (max-width: 1020px) {
    .section-title {
        margin-top: 60px;
    }

    .remove-btn {
        transform: translateY(0);
        opacity: 1;
    }

    .saved-locations {
        justify-content: center;
    }

    .open {
        height: 80%;
        width: 600px;
        left: calc(50% - 300px);
    }
}

@media (max-width: 720px) {
    .open {
        width: 100vw;
        left: 0;
        right: 0;
    }
}

